--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webseminar2",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "hbs": "^4.2.0",
+    "pg": "^8.14.1"
   }
 }
