--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1"
   }
 }
