--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-handlebars": "^8.0.1",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1"
